# bitshares-tradehistory-analyzer

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  analyzer.py  check_elastic.py  config.yml.example  download_history.py  pyproject.toml  requirements-dev.txt
bitshares_tradehistory_analyzer/: ccgains_helper.py  consts.py  cumulative_analyzer_cli.py  cumulative_trade_analyzer.py  history_downloader.py  parser.py  wrapper.py
lib/: helper.py
tests/: conftest.py  test_cumulative_trade_analyzer.py  test_history.py  test_history_downloader.py  test_parser.py  test_wrapper.py
tests/cassettes/test_history_downloader/: test_fetch_settlements_in_gs_state_from_scratch.yaml
tests/cassettes/test_wrapper/: test_detect_version.yaml  test_get_global_settlements.yaml  test_get_trades.yaml  test_get_transfers.yaml  test_get_transfers_from_date.yaml  test_is_alive_wrapper_ok.yaml
tests/fixture_data/: settlement_gs.json  settlement_gs_old_style.json  settlement_regular.json  settlement_regular_new.json  trade.json  trade_null_op_object.json  transfer.json  transfer_null_op_object.json
