[tool.poetry]
name = "bitshares_tradehistory_analyzer"
version = "0.1.0"
description = "Trades history analyzer for BitShares-based exchanges"
authors = ["Vladimir Kamarzin <vvk@vvk.pp.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
bitshares = "^0.5"
"ruamel.yaml" = "^0.17.21"
# Need old mypy for old pandas
numpy = "<1.19"
# Pin pandas to workaround https://github.com/bitphage/bitshares-tradehistory-analyzer/issues/4
pandas = "==0.24.2"
ccgains = { git = "https://github.com/probstj/ccGains.git", rev="bd2ed4a8d5e23147d4cffa7d059e16c211e2cdba" }
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
